--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/MARCdetail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/MARCdetail.tmpl
@@ -67,11 +67,11 @@ function Addbiblio(op) {
    <div id="bd">
 	<div id="yui-main">
 	<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="action-catalogue.inc" -->
 
 <!-- TMPL_UNLESS name="popup" -->
     <h1>MARC biblio : <!-- TMPL_VAR NAME="biblionumber" --></h1>
     
-<!-- TMPL_INCLUDE NAME="action-catalogue.inc" -->
 
 <!-- /TMPL_UNLESS -->
 
@@ -441,6 +441,7 @@ function Addbiblio(op) {
 </div>
 </div>
 <div class="yui-b">
+<!-- TMPL_INCLUDE NAME="biblio-view-menu.inc" -->
 <!-- TMPL_INCLUDE NAME="cat-menu.inc" -->
 </div>
 </div>
