--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reserve/request.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reserve/request.tmpl
@@ -141,7 +141,7 @@ if (alreadyreserved > "0"){
 
     <!-- TMPL_IF NAME="alreadyreserved" -->			
     <p class="problem">
-      <strong>Operation Failed</strong>
+      <strong>Warning:</strong>
       This patron already has a hold on this item
     </p>
     <!-- /TMPL_IF -->
@@ -268,6 +268,7 @@ if (alreadyreserved > "0"){
     </form>
 
 <!-- /TMPL_UNLESS -->
+<!-- TMPL_UNLESS NAME="cardnumber" -->
 <!-- TMPL_IF name="reserveloop" -->
 <form name="T<!-- TMPL_VAR NAME="time" -->" action="modrequest.pl" method="post">
 <fieldset class="rows left">
@@ -354,6 +355,7 @@ if (alreadyreserved > "0"){
 </fieldset>
 </form>
 <!-- /TMPL_IF -->
+<!-- /TMPL_UNLESS -->
 
 </div>
 </div>
