--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/serials-collection.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/serials-collection.tmpl
@@ -75,6 +75,7 @@ $(document).ready(function() {
 
 
 <!-- TMPL_UNLESS name="popup" -->
+	<!-- TMPL_INCLUDE NAME="serials-toolbar.inc" -->
 
 	<h1>Serial Collection information for  <i><!-- TMPL_VAR name="bibliotitle" --></i></h1>
 <!-- /TMPL_UNLESS -->
