--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/subscription-detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/subscription-detail.tmpl
@@ -104,29 +104,11 @@ function popup(subscriptionid) {
    <div id="bd">
 	<div id="yui-main">
 	<div class="yui-b">
-
+	<!-- TMPL_INCLUDE NAME="serials-toolbar.inc" -->
 
     <h1>Subscription #<!--TMPL_VAR name="subscriptionid"--></h1>
     <!--TMPL_IF Name="abouttoexpire"--><div class="problem">Subscription is by its end. It should be renewed now.</div><!--/TMPL_IF-->
-    <div id="action">
-        <div class="edit">
-<ul>
-	<li>            <a href="subscription-add.pl?op=mod&amp;subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Edit</a></li>
-	<li>            <a href="subscription-add.pl?op=dup&amp;subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Duplicate </a></li>
-	<li>            <a href="#" onclick="popup(<!--TMPL_VAR Name="subscriptionid"-->)">Renew </a></li>
-	<li>            <a href="serials-edit.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->&amp;serstatus=1,3">Receive</a></li>
-	<li>            <a href="javascript:confirm_deletion()">Delete</a></li>
-</ul>
-        </div>
-        <div class="view">
-<ul>
-	<li>            <a href="serials-collection.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Serial Collection</a></li>
-	            <!-- TMPL_IF NAME="routing" --><li><a href="routing.pl?subscriptionid=<!-- TMPL_VAR NAME="subscriptionid" -->">Edit Routing List</a></li><!-- TMPL_ELSE -->
-	<li>            <a href="routing.pl?subscriptionid=<!-- TMPL_VAR NAME="subscriptionid" -->&amp;op=new">Create Routing List</a></li>
-            <!-- /TMPL_IF -->
-</ul>
-        </div>
-    </div>
+    
     <div id="subscription_info">
         <h2>Subscription information</h2>
         <p><label>Librarian identity:</label> <!-- TMPL_VAR name="librarian" --></p>
