removing confusing display of patron category from moremember
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember.tmpl
@@ -145,7 +145,7 @@ function confirm_reregistration() {
  <h3>Library use</h3>
  <ul>
     <li><strong>Patron number: </strong><!-- TMPL_VAR NAME="borrowernumber" --></li>
-    <li><strong>Category: </strong><!-- TMPL_VAR NAME="description" --> (<!-- TMPL_VAR NAME="categorycode" -->)I?(<!-- TMPL_VAR NAME="I" -->)A?(<!-- TMPL_VAR NAME="A" -->)C?(<!-- TMPL_VAR NAME="C" -->)(<!-- TMPL_VAR NAME="category_type" -->)</li>
+    <li><strong>Category: </strong><!-- TMPL_VAR NAME="description" --> (<!-- TMPL_VAR NAME="categorycode" -->)</li>
     <li><strong>Registration date: </strong><!-- TMPL_VAR NAME="dateenrolled" --></li>
     
     <li><strong>Expiration date: </strong>
