remove test data from branches template
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/branches.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/branches.tmpl
@@ -144,9 +144,9 @@
                 <td>
                     <!-- TMPL_IF name="no-categories-p" -->
                         (no categories set)
-                    <!-- TMPL_ELSE -->O
+                    <!-- TMPL_ELSE -->
                         <!-- TMPL_LOOP name="category_list" -->
-                            N<!-- TMPL_VAR name="categoryname" --><br />
+                            <!-- TMPL_VAR name="categoryname" --><br />
                         <!-- /TMPL_LOOP -->
                     <!-- /TMPL_IF -->
                 </td>
