improvements to nomenclature for English
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/admin-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/admin-home.tmpl
@@ -17,30 +17,30 @@
 <table>
 <caption>System Preferences</caption>
 <tr>
-	<td><a href="/cgi-bin/koha/admin/systempreferences.pl">System preferences</a></td>
-	<td>Change essential system preferences like MARC flavor, date format, administrator e-mail, and templates.</td>
+	<td><a href="/cgi-bin/koha/admin/systempreferences.pl">Global system preferences</a></td>
+	<td>Manage global system preferences like MARC flavor, date format, administrator e-mail, and templates.</td>
 </tr>
 </table>
 <table>
-<caption>For best results, configure these parameters in the order they appear</caption>
+<caption>Configure these parameters in the order they appear</caption>
 <tr>
 <th colspan="2">Basic parameters</th>
 </tr>
 <tr>
-	<td><a href="/cgi-bin/koha/admin/branches.pl">Libraries and branches</a></td>
-	<td>Define libraries and branches.</td>
+	<td><a href="/cgi-bin/koha/admin/branches.pl">Libraries, branches and agency categories</a></td>
+	<td>Define libraries, branches and agency categories.</td>
 </tr>
 <tr>
 	<td><a href="/cgi-bin/koha/admin/aqbookfund.pl">Accounts and budgets</a></td>
 	<td>Accounts and budgets administration for acquisitions.</td>
 </tr>
 <tr>
-	<td><a href="/cgi-bin/koha/admin/currency.pl">Currencies</a></td>
-	<td>Define exchange rates used for acquisitions.</td>
+	<td><a href="/cgi-bin/koha/admin/currency.pl">Currencies and exchange rates</a></td>
+	<td>Define currencies and exchange rates used for acquisitions.</td>
 </tr>
 <tr>
-	<td><a href="/cgi-bin/koha/admin/itemtypes.pl">Item types</a></td>
-	<td>Define item types used for circulation rules.</td>
+	<td><a href="/cgi-bin/koha/admin/itemtypes.pl">Item types and circulation codes</a></td>
+	<td>Define item types and circulation codes used for circulation rules.</td>
 </tr>
 
 <tr>
@@ -57,15 +57,15 @@
 <tr>
 	<td><a href="/cgi-bin/koha/admin/roadtype.pl" >Road types</a>
 	</td>
-	<td>Define road types. Fill this table to get a list of road types when adding/editing patrons (can be used in Geographic statistics).</td>
+	<td>Define road types (street, avenue, way, etc.). Road types display as authorized values when adding/editing patrons and can be used in geographic statistics.</td>
 </tr>
 <tr>
 	<td><a href="/cgi-bin/koha/admin/issuingrules.pl">Circulation rules</a></td>
-	<td>Define circulation rules in a matrix for libraries / patrons / itemtypes (number of checkouts, duration, cost...).</td>
+	<td>Define circulation rules in a matrix for libraries / patrons / itemtypes / circ codes (number of checkouts, duration, fee, etc.).</td>
 </tr>
 <tr>
 	<td><a href="/cgi-bin/koha/admin/finesrules.pl">Fines rules</a></td>
-	<td>Define fines in a matrix for libraries / patrons / itemtypes (cost, grace period...).</td>
+	<td>Define fines in a matrix for libraries / patrons / itemtypes (cost, grace period, etc.).</td>
 </tr>
 <tr>
 <th colspan="2">Catalogue</th>
@@ -76,7 +76,7 @@
 </tr>
 <tr>
 	<td><a href="/cgi-bin/koha/admin/biblio_framework.pl">MARC Bibliographic framework</a></td>
-	<td>Create and manage Bibliographic frameworks that define the characteristics of your MARC Records (field and subfield definitions).</td>
+	<td>Create and manage Bibliographic frameworks that define the characteristics of your MARC Records (field and subfield definitions) as well as templates for the MARC editor.</td>
 </tr>
 <tr>
 	<td><a href="/cgi-bin/koha/admin/koha2marclinks.pl">Koha -> MARC mapping</a></td>
