--- a/koha-tmpl/intranet-tmpl/prog/en/modules/authorities/authorities-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/authorities/authorities-home.tmpl
@@ -4,7 +4,22 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-authorities.inc" -->
+
+<script language="JavaScript" type="text/javascript">
+function Help() {
+    newin=window.open("/cgi-bin/koha/help.pl","Koha Help",'width=600,height=600,toolbar=false,scrollbars=yes');
+}
+
+function addauthority() {
+    X = document.forms[0].authtype.value;
+    window.location="/cgi-bin/koha/authorities/authorities.pl?authtypecode="+X;
+}
+function searchauthority() {
+    X = document.forms[0].authtype2.value;
+    Y = document.forms[0].value.value;
+    window.location="/cgi-bin/koha/authorities/authorities-home.pl?op=do_search&type=intranet&authtypecode="+X+"&value="+Y+"&marclist=&and_or=and&excluding=&operator=contains";
+}
+</script>
 
 <div id="doc3" class="yui-t2">
    
@@ -100,5 +115,4 @@
 </div>
 </div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
